--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "babel-preset-react": "^6.24.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
